--- a/ProjetAnalysededonnees.html
+++ b/ProjetAnalysededonnees.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Jacobs Sofia" />
+<meta name="author" content="Jacobs Sofia &amp; Bauer Julie" />
 
 <meta name="date" content="2025-09-25" />
 
@@ -1504,14 +1504,68 @@ font-size: 0.95em;
 
 
 <h1 class="title toc-ignore">TP2</h1>
-<h4 class="author">Jacobs Sofia</h4>
+<h4 class="author">Jacobs Sofia &amp; Bauer Julie</h4>
 <h4 class="date">2025-09-25</h4>
 
 </div>
 
 
-<div id="titre-1" class="section level1" number="1">
-<h1><span class="header-section-number">1</span> Titre 1</h1>
+<pre class="r"><code># Vérifie si {reticulate} est installé, sinon l’installe, pour exécuter Python
+if (!requireNamespace(&quot;reticulate&quot;, quietly = TRUE)) {
+  install.packages(&quot;reticulate&quot;)
+}</code></pre>
+<div id="exemple-de-code-python" class="section level1" number="1">
+<h1><span class="header-section-number">1</span> Exemple de code
+python</h1>
+<pre class="python"><code>import random
+import time
+
+# la reproduction d&#39;un python
+def python_reproduction():
+    print(&quot;python python python &quot;)
+
+    # Étape 1 : Saison des amours
+    print(&quot;\nÉtape 1 : La saison des amours commence !&quot;)
+    male_ready = random.choice([True, False])
+    female_ready = random.choice([True, False])
+
+    if male_ready and female_ready:
+        print(&quot;Le mâle et la femelle sont prêts à s&#39;accoupler&quot;)
+    else:
+        print(&quot;L&#39;un des deux n’est pas d’humeur, tant pis Fail&quot;)
+        return
+
+    # Étape 2 : Accouplement
+    print(&quot;\nÉtape 2 : Accouplement en cours...&quot;)
+    time.sleep(2)
+    print(&quot;Le mâle et la femelle ont fait leur bail. On attend les œufs maintenant &quot;)
+
+    # Étape 3 : Ponte des œufs
+    egg_count = random.randint(10, 40)  # Les pythons pondent généralement 10 à 40 œufs
+    print(f&quot;\nEtape 3 : La femelle pond {egg_count} œufs ! Elle va les couver.&quot;)
+
+    # Étape 4 : Incubation
+    incubation_days = random.randint(50, 80)
+    print(f&quot;\nEtape 4 : Incubation en cours pendant {incubation_days} jours...&quot;)
+    for day in range(1, incubation_days + 1, 10):  # Simulation rapide
+        print(f&quot;Jour {day}: La femelle garde les œufs au chaud en s&#39;enroulant autour.&quot;)
+        time.sleep(0.5)
+
+    # Étape 5 : Éclosion
+    hatch_rate = random.uniform(0.6, 0.9)  # 60 à 90 % des œufs éclosent en général
+    hatched = int(egg_count * hatch_rate)
+    print(f&quot;\nEtape 5 : {hatched} bébés pythons sortent des œufs.&quot;)
+    print(f&quot;{egg_count - hatched} œufs n’ont pas éclos. C’est la loi de la nature. &quot;)
+
+    # Fun fact pour conclure
+    print(&quot;\nFun fact : Les bébés pythons sont indépendants dès la naissance.&quot;)
+
+# Lancer la simulation
+python_reproduction()</code></pre>
+<pre><code>## python python python 
+## 
+## Étape 1 : La saison des amours commence !
+## L&#39;un des deux n’est pas d’humeur, tant pis Fail</code></pre>
 <div id="titre-2" class="section level2" number="1.1">
 <h2><span class="header-section-number">1.1</span> Titre 2</h2>
 <div id="titre-3" class="section level3" number="1.1.1">
