--- a/ProjetAnalysededonnees.html
+++ b/ProjetAnalysededonnees.html
@@ -1569,8 +1569,7 @@ border-radius: 6px;
 padding: 8px;
 background-color: #f5f5f5; 
 color: #222;
-overflow-x: auto;
-}
+overflow-x: auto; }
 
 a {
 color: #d63384; 
